fixed about overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -1861,8 +1861,9 @@ display: flex;
       object-fit: contain;
     }
         .text-bounding-box {
-          width: auto;
-          padding-right: 24px;
+          // width: auto;
+          padding-right: 16px;
+          padding-left: 0px;
           transform: translateX(-8px);
           margin: 3rem 0;
     
